# CartPilot

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  railway.json  vercel.json
backend/: Dockerfile  alembic.ini  main.py  mock_query.py  pyproject.toml  railway.json  requirements.txt  seed_restaurants.py  test_startup.py  test_stream.py
backend/alembic/: env.py
backend/app/ai/: exceptions.py  orchestrator.py
backend/app/api/: deps.py
backend/app/core/: config.py  embeddings.py  logger.py  security.py
backend/app/db/: base.py  session.py
backend/app/engine/: __init__.py  constraints.py  logger.py  models.py  pipeline.py
backend/app/events/: __init__.py  bus.py
backend/app/ingestion/: __init__.py  cleaner.py  embedder.py  parser.py  repository.py  services.py  validator.py
backend/app/knowledge/: __init__.py  service.py
backend/app/memory/: __init__.py  session.py
backend/app/providers/: __init__.py  base.py  cache.py  factory.py
backend/app/schemas/: cart.py  category.py  conversation.py  inventory.py  order.py  product.py  user.py
backend/app/services/: cart_service.py  commerce_service.py  conversation_manager.py  user_service.py
backend/app/tasks/: __init__.py  embeddings.py  etl_food.py  etl_restaurant.py  registry.py
backend/app/workflows/: __init__.py  base.py  context.py  conversation.py  food.py  grocery.py  intent.py  registry.py
backend/evaluation/: retrieval_ground_truth.json
backend/scripts/: evaluate_explainability.py  evaluate_goal_understanding.py  evaluate_memory.py  evaluate_optimization.py  evaluate_planning.py  evaluate_retrieval.py  evaluate_verification.py  generate_embeddings.py  generate_menu_items.py  ingest_openfoodfacts.py  ingest_recipes.py  ingest_restaurants.py  init_db.py  seed.py  seed_bigbasket.py  seed_catalog.py  seed_zomato_restaurants.py  test_e2e_pipeline.py
backend/tests/: conftest.py  test_conversation_stream.py
backend/tests/api/: test_conversation_api.py
(+164 files in other folders)
